--- a/ElevenNote.WebMVC/Views/Category/Index.cshtml
+++ b/ElevenNote.WebMVC/Views/Category/Index.cshtml
@@ -19,13 +19,12 @@
 </div>
 }
 
-<div class="container">
+@*<div class="container">
     <table class="table table-striped">
         <thead>
             <tr>
                 <th>Category ID</th>
                 <th>Category Name</th>
-                <th>Note Title</th>
                 <th></th>
             </tr>
         </thead>
@@ -45,9 +44,9 @@
             }
         </tbody>
     </table>
-</div>
+</div>*@
 
-@*<table class="table">
+<table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.CategoryId)
@@ -75,4 +74,4 @@
         </tr>
     }
 
-</table>*@
+</table>
